--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,8 @@
 @import '_infoReserva';
 @import '_coupon';
 @import '_reservCardsItem';
+@import '_Booking&Payment';
 
 @import '../scss/media/_mediaHome';
 @import '../scss/media/_mediaRooms&Prices';
+@import '../scss/media/mediaBooking_Pay'
