--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -15,7 +15,7 @@
 }
 
 %FlexSerch{
-    display: flex;
+    display: flex; 
     flex-direction: column;
 }
 
@@ -26,6 +26,7 @@
     font-size: 11px;
     line-height: 21px;
     color: #585858;
+    width: 150px;
 }
 
 %M_B{
@@ -47,9 +48,14 @@ max-width: 100%;
     &__Serch {
         // display: flex;
         // justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
         
         img {
             max-width: 100%;
+            height: auto;
         }
         
     }
@@ -65,7 +71,7 @@ max-width: 100%;
 }
 .serch {
     &__img {
-        position: relative;
+        position: relative; 
         display: flex;
         justify-content: center;
     }
@@ -74,36 +80,47 @@ max-width: 100%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        position: relative;
-        margin: -23% 0% 23% 19%;
-        width: 62%;
-        height: 18.5%;
+        position: absolute;
+        margin-top: 205px;
+        width: 800px;
+        height: 70px;
         background: #FFFFFF;
         box-shadow: 0px 2px 15px rgba(0, 0, 0,  0.30);
         z-index: 100;
+        
+
+        label{
+            @extend %P_Style;
+            input{
+                @extend %inputStyle;
+            }
+        }
+
         button{
             // margin-top: 10px;
             width: 83px;
             height: 22px;
+            margin-top: 20px;
             background: #3F8CFF;
             box-shadow: 0px 2px 20px rgba(63, 140, 255,  0.50);
             border-radius: 6px;
-            margin-top: 1px;
-            p{
-                font-family: 'Montserrat';
-                font-style: normal;
-                font-weight: 500;
-                font-size: 8px;
-                line-height: 17px;
-                color: #FFFFFF;
-            }
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 8px;
+            line-height: 17px;
+            color: #FFFFFF;
+            display: flex;
+            align-items: center;
+            justify-content: center
+        
         }
     }
 
     &__get {
         @extend %FlexSerch;
         @extend %M_B;
-        p{
+        label{
             @extend %P_Style;
         }
         input {
@@ -114,7 +131,7 @@ max-width: 100%;
     &__set {
         @extend %FlexSerch;
         @extend %M_B;
-        p{
+        label{
             @extend %P_Style;
         }
         input {
@@ -125,7 +142,7 @@ max-width: 100%;
     &__pipl {
         @extend %FlexSerch;
         @extend %M_B;
-        p{
+        label{
             @extend %P_Style;
         }
         input {
