--- a/src/assets/scss/_infoCaeds.scss
+++ b/src/assets/scss/_infoCaeds.scss
@@ -32,6 +32,7 @@
             // background: url(.jpg), #FFFFFF;
             box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.25);
             width: 100%;
+            height: auto;
         }
     }
 }
