--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,6 +9,9 @@
 @import '_coupon';
 @import '_reservCardsItem';
 @import '_Booking&Payment';
+@import '_Articles';
+
+
 
 @import '../scss/media/_mediaHome';
 @import '../scss/media/_mediaRooms&Prices';
